samples/_failures_safe/1761248026_bfcfb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93cb0e32.c: In function ‘main’:
./samples/SAFE/__tmp_93cb0e32.c:152:5: error: expected declaration or statement at end of input
  152 |     char input[32];
      |     ^~~~
